--- a/app/src/main/res/layout/fragment_heroes_list.xml
+++ b/app/src/main/res/layout/fragment_heroes_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,16 +8,36 @@
     android:orientation="vertical"
     tools:context=".presentation.heroes.HeroesListFragment">
 
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:gravity="center"
-        android:text="@string/appName"
-        android:textAllCaps="false"
-        android:textColor="@color/white80"
-        android:textSize="25sp"
-        android:textStyle="bold" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="@string/appName"
+            android:textAllCaps="false"
+            android:textColor="@color/white80"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <Button
+            android:id="@+id/btn_info"
+            android:layout_width="58dp"
+            android:layout_height="wrap_content"
+            android:paddingTop="11dp"
+            android:background="@android:color/transparent"
+            android:textAllCaps="false"
+            android:textColor="@color/white80"
+            app:icon="@android:drawable/ic_menu_info_details"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvHeroesList"
